--- a/welcome.html
+++ b/welcome.html
@@ -214,7 +214,7 @@ body {
 
   <!-- Text -->
   <div class="glow-text">Welcome to <strong>DriveHub</strong></div>
-  <p class="tagline">"Freedom on Four Wheels Mai yeda hai"</p>
+  <p class="tagline">"Freedom on Four Wheels"</p>
 
   <!-- Button -->
   <button class="enter-btn" onclick="window.location.href='login page.html'">Enter DriveHub</button>
