--- a/welcome.html
+++ b/welcome.html
@@ -3,253 +3,213 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DriveHub - Luxury Car Rentals</title>
+<title>DriveHub – Welcome</title>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap');
+  body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(circle at center, #0a0a0a, #000);
+    perspective: 1000px;
+    height: 100vh;
+  }
 
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100vh;
-  font-family: 'Poppins', sans-serif;
-  color: #fff;
-  background: linear-gradient(135deg, #0d0d0d 0%, #111 100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  perspective: 1200px;
-}
+  /* 3D Road */
+  .road {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) rotateX(60deg);
+    width: 200%;
+    height: 25vh;
+    background: repeating-linear-gradient(
+      to bottom,
+      #333 0px,
+      #333 20px,
+      #222 20px,
+      #222 40px
+    );
+    animation: roadMove 1s linear infinite;
+  }
 
-.scene {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
+  @keyframes roadMove {
+    0% { background-position-y: 0; }
+    100% { background-position-y: 40px; }
+  }
 
-/* ROAD */
-.road {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30vh;
-  background: linear-gradient(to bottom, #111 0%, #000 100%);
-  transform-origin: bottom;
-  transform: rotateX(65deg);
-  z-index: 2;
-  overflow: hidden;
-}
+  /* Car */
+  .car {
+    position: absolute;
+    bottom: 20vh;
+    left: 50%;
+    transform: translateX(-50%) scale(1);
+    width: 300px;
+    filter: drop-shadow(0 0 25px #ff0000);
+    animation: carMove 2s ease-in-out infinite alternate;
+  }
 
-.lane {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 6px;
-  height: 100%;
-  background: repeating-linear-gradient(
-    to bottom,
-    #fff 0, #fff 40px,
-    transparent 40px, transparent 80px
-  );
-  animation: moveLane 0.25s linear infinite;
-  transform: translateX(-50%);
-}
+  @keyframes carMove {
+    0% { transform: translateX(-50%) translateY(0) scale(1); }
+    100% { transform: translateX(-50%) translateY(-6px) scale(1.02); }
+  }
 
-@keyframes moveLane {
-  0% {background-position-y: 0;}
-  100% {background-position-y: 80px;}
-}
+  /* Exhaust Flame */
+  .flame {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: calc(20vh + 10px);
+    left: 50%;
+    transform: translateX(85px);
+    background: radial-gradient(circle, yellow, orange, red);
+    border-radius: 50%;
+    filter: blur(8px);
+    animation: flamePulse 0.12s infinite alternate;
+  }
 
-/* LIGHT STREAKS */
-.light-streak {
-  position: absolute;
-  width: 300%;
-  height: 3px;
-  top: 50%;
-  left: -100%;
-  background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,215,0,0.4), rgba(255,255,255,0));
-  animation: streakMove 1s linear infinite;
-  transform: rotateX(65deg);
-  z-index: 1;
-}
+  @keyframes flamePulse {
+    0% { transform: translateX(85px) scale(0.7); opacity: 0.7; }
+    100% { transform: translateX(85px) scale(1.1); opacity: 1; }
+  }
 
-@keyframes streakMove {
-  0% {transform: translateX(-100%) rotateX(65deg);}
-  100% {transform: translateX(100%) rotateX(65deg);}
-}
+  /* Text */
+  .glow-text {
+    position: absolute;
+    top: 18%;
+    width: 100%;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 700;
+    color: white;
+    text-shadow: 0 0 25px #ff0000, 0 0 50px #ff0000;
+    letter-spacing: 1px;
+  }
 
-/* FOG */
-.fog {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(ellipse at bottom, rgba(255,255,255,0.03), transparent 60%);
-  animation: fogMove 15s linear infinite;
-  z-index: 3;
-}
+  .tagline {
+    position: absolute;
+    top: 32%;
+    width: 100%;
+    text-align: center;
+    font-size: 26px;
+    color: #ccc;
+    letter-spacing: 0.5px;
+  }
 
-@keyframes fogMove {
-  0% {transform: translateX(0);}
-  50% {transform: translateX(50px);}
-  100% {transform: translateX(0);}
-}
+  /* Button */
+  .enter-btn {
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 16px 36px;
+    background: #ff0000;
+    color: white;
+    border-radius: 14px;
+    font-size: 22px;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+    transition: 0.3s;
+    box-shadow: 0 0 20px #ff0000;
+  }
 
-/* CAR */
-.car {
-  position: absolute;
-  bottom: 10vh;
-  left: 50%;
-  width: 350px;
-  transform: translateX(-50%) scale(0.7);
-  filter: drop-shadow(0 20px 30px rgba(0,0,0,0.7));
-  animation: carZoom 5s ease-in-out forwards;
-  z-index: 5;
-}
+  .enter-btn:hover {
+    transform: translateX(-50%) scale(1.05);
+    box-shadow: 0 0 35px #ff2a2a;
+  }
 
-/* Exhaust flame */
-.flame {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  bottom: calc(10vh + 20px);
-  left: 50%;
-  transform: translateX(-50%);
-  background: radial-gradient(circle, #ff6600, #ff3300, transparent);
-  border-radius: 50%;
-  filter: blur(15px);
-  animation: flameFlicker 0.3s infinite;
-  z-index: 4;
-}
+  /* 🔥 MOBILE FIXES */
+  @media (max-width: 900px) {
+    body {
+      perspective: 800px;
+    }
+    .road {
+      height: 22vh;
+      transform: translateX(-50%) rotateX(55deg);
+    }
+    .car {
+      width: 240px;
+      bottom: 16vh;
+    }
+    .flame {
+      width: 30px;
+      height: 30px;
+      bottom: calc(16vh + 10px);
+      transform: translateX(70px);
+    }
+    .glow-text {
+      top: 22%;
+      font-size: 44px;
+    }
+    .tagline {
+      top: 36%;
+      font-size: 20px;
+    }
+    .enter-btn {
+      top: 72%;
+      font-size: 20px;
+      padding: 14px 28px;
+    }
+  }
 
-@keyframes flameFlicker {
-  0% {transform: translateX(-50%) scale(1);}
-  50% {transform: translateX(-50%) scale(1.2);}
-  100% {transform: translateX(-50%) scale(1);}
-}
-
-@keyframes carZoom {
-  0% {transform: translateX(-50%) scale(0.5); opacity: 0;}
-  50% {transform: translateX(-50%) scale(0.9); opacity: 1;}
-  100% {transform: translateX(-50%) scale(1.2); opacity: 1;}
-}
-
-/* TEXT */
-.glow-text {
-  position: absolute;
-  top: 18%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: clamp(32px, 6vw, 75px);
-  font-family: 'Playfair Display', serif;
-  color: #ffd700;
-  text-shadow: 0 0 25px #ffd700, 0 0 50px #ffd70055, 0 0 80px #ffd70033;
-  opacity: 0;
-  animation: fadeInText 2s ease-in-out 1s forwards;
-}
-
-.tagline {
-  position: absolute;
-  top: 33%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: clamp(18px, 4vw, 36px);
-  font-weight: 500;
-  color: #ffffffcc;
-  text-shadow: 0 0 10px #000;
-  opacity: 0;
-  animation: fadeInText 2s ease-in-out 2s forwards;
-}
-
-@keyframes fadeInText {
-  from {opacity: 0; transform: translate(-50%, -50%) scale(0.9);}
-  to {opacity: 1; transform: translate(-50%, -50%) scale(1);}
-}
-
-/* BUTTON */
-.enter-btn {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 15px 35px;
-  font-size: clamp(18px, 4vw, 22px);
-  background: linear-gradient(45deg, #ffd700, #ffe066, #ffd700);
-  color: #1a1a1a;
-  border: none;
-  border-radius: 15px;
-  cursor: pointer;
-  font-weight: 700;
-  opacity: 0;
-  animation: fadeInText 2s ease-in-out 4s forwards;
-  transition: all 0.3s ease;
-  z-index: 6;
-  background-size: 200% 200%;
-}
-
-.enter-btn:hover {
-  animation: shimmer 1.5s linear infinite;
-  box-shadow: 0 0 30px #ffd700aa, 0 0 60px #ffd70055 inset;
-  transform: translateX(-50%) scale(1.1);
-}
-
-@keyframes shimmer {
-  0% {background-position: 0% 50%;}
-  100% {background-position: 100% 50%;}
-}
-
-/* RESPONSIVE FIXES */
-@media (max-width: 768px) {
-  .car { width: 230px; bottom: 12vh; transform: translateX(-50%) scale(1); }
-  .flame { width: 35px; height: 35px; bottom: calc(12vh + 15px); }
-  .road { height: 26vh; }
-}
-
-@media (max-width: 480px) {
-  .car { width: 200px; bottom: 14vh; }
-  .road { height: 24vh; }
-  .enter-btn { top: 68%; }
-}
+  @media (max-width: 480px) {
+    body {
+      perspective: 650px;
+    }
+    .road {
+      height: 20vh;
+      transform: translateX(-50%) rotateX(50deg);
+    }
+    .car {
+      width: 200px;
+      bottom: 18vh;
+    }
+    .flame {
+      width: 26px;
+      height: 26px;
+      bottom: calc(18vh + 6px);
+      transform: translateX(60px);
+    }
+    .glow-text {
+      top: 20%;
+      font-size: 36px;
+    }
+    .tagline {
+      top: 34%;
+      font-size: 18px;
+    }
+    .enter-btn {
+      top: 74%;
+      font-size: 18px;
+    }
+  }
 </style>
 </head>
 
 <body>
 
-<audio id="engineSound" autoplay loop>
-  <source src="car-engine.mp3" type="audio/mpeg">
+<!-- Road -->
+<div class="road"></div>
+
+<!-- Car -->
+<img src="car.png" class="car" alt="car">
+
+<!-- Flame -->
+<div class="flame"></div>
+
+<!-- Text -->
+<h1 class="glow-text">WELCOME TO DRIVEHUB</h1>
+<div class="tagline">Experience Speed, Style & Adventure</div>
+
+<!-- Button -->
+<button class="enter-btn" onclick="window.location.href='login.html'">Enter DriveHub</button>
+
+<!-- Sound -->
+<audio autoplay>
+  <source src="engine.mp3" type="audio/mpeg">
 </audio>
-
-<div class="scene">
-  <div class="road">
-    <div class="lane"></div>
-  </div>
-
-  <div class="light-streak" style="top:55%; animation-duration:1s;"></div>
-  <div class="light-streak" style="top:60%; animation-duration:1.2s;"></div>
-
-  <div class="fog"></div>
-
-  <img src="c-image.png" class="car">
-
-  <div class="flame"></div>
-
-  <div class="glow-text">Welcome to <strong>DriveHub</strong></div>
-  <p class="tagline">"Freedom on Four Wheels"</p>
-
-  <button class="enter-btn" onclick="window.location.href='login page.html'">
-    Enter DriveHub
-  </button>
-</div>
-
-<script>
-const engine = document.getElementById('engineSound');
-engine.volume = 0.4;
-engine.play().catch(()=>{
-  document.addEventListener('click',() => engine.play(), {once:true});
-});
-</script>
 
 </body>
 </html>
